1.创建用户 2.获取用户信息
